Configure router without lazy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-example-directive></app-example-directive>
+<nav>
+    <a [routerLink]="['directives']">Directives</a>
+    <a [routerLink]="['databinding']">Databinding</a>
+</nav>
 
-<app-father></app-father>
+<router-outlet></router-outlet>
