--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
     <a [routerLink]="['directives']">Directives</a>
     <a [routerLink]="['databinding']">Databinding</a>
+    <a [routerLink]="['databinding/child/89']">Child</a>
 </nav>
 
 <router-outlet></router-outlet>
