--- a/src/app/directives/example-directive/example-directive.component.html
+++ b/src/app/directives/example-directive/example-directive.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="show; then comp else nothing"></div>
 
 <ng-template #comp>
+    <button (click)="navToDataBinding()">Navigate to Databinding</button>
     <p>{{hello}}</p>
     <ul>
         <li *ngFor="let color of colors; let o = odd; let e = even; let l = last" 
