Login works witout form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <nav>
+    <a [routerLink]="['login']">Login</a>
     <a [routerLink]="['directives']">Directives</a>
     <a [routerLink]="['databinding']">Databinding</a>
     <a [routerLink]="['databinding/child/89']">Child</a>
