--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,5 @@
-<p>login works!</p>
+<form [formGroup]="loginForm">
+    Username: <input type="text" formControlName="username">
+    Password: <input type="password" formControlName="password">
+    <button (click)="login()">Login</button>
+</form>
