--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
     <a [routerLink]="['login']">Login</a>
+    <a [routerLink]="['chuck']">Chuck</a>
     <a [routerLink]="['directives']">Directives</a>
     <a [routerLink]="['databinding']">Databinding</a>
     <a [routerLink]="['databinding/child/89']">Child</a>
